# log4me

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  mkdocs.yml  pyproject.toml
docs/: api.md
log2me/: trace_disabled.py
log4me/: __init__.py  print_loggers_tests.py  settings.py  setup_log.py  setup_log_tests.py  setup_logging.py
