[project]
name = "log4me"
dynamic = ["version"]
# version = "0.0.1"
description = "Basic logging helpers."
authors = [{name = "Nicu Tofan", email = "nicu.tofan@gmail.com"}]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "attrs==23.1.0",
]


[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "isort",
    "mypy",
    "pytest-cov",
    "pytest-mock",
    "pytest",
    "twine",
    "wheel",
    "pre-commit",
    "build"
]
tests = [
    "black",
    "flake8",
    "isort",
    "mypy",
    "pytest-cov",
    "pytest-mock",
    "pytest",
    "twine",
    "wheel",
]


[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=67.0", "setuptools_scm[toml]>=8"]


[tool.setuptools]
include-package-data = true


[tool.setuptools.packages.find]
exclude = ["venv*", "scripts", "playground", "tests"]


[tool.setuptools_scm]
fallback_version = "0.0.1-dev"
write_to = "log4me/__version__.py"


[tool.isort]

# Make isort compatible with black
profile = "black"

skip = ["*_test.py", "test_*", "*_tests.py", "tests_*"]
src_paths = "log4me"
known_first_party = "log4me"


[tools.black]

# Standard black line length is 88
line-length = 80

# Python versions that should be supported by Black's output
target-version = ['py39', 'py310', 'py311']


[tool.pytest.ini_options]
testpaths = [
    "log4me",
]
python_files = [
    "test_*.py", "*_test.py",
    "tests_*.py", "*_tests.py",
    "spec_*.py", "*_spec.py",
    "specs_*.py", "*_specs.py",
]
python_classes = ["Test", "Acceptance"]
python_functions = ["test"]


[tool.mypy]
ignore_missing_imports = true
exclude = [".+_test.py", "test_.+", ".+_tests.py", "tests_.+"]


[tool.flake8]
max-line-length = 80
docstring-convention = "google"
exclude = ["*_test.py", "test_*", "*_tests.py", "tests_*"]
extend-ignore = "E203, E501, E704"
